fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,8 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 25vw;
+  margin-right: 25vw;
 }
 
 .App-link {
